<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:id="@+id/LA_animationView"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="200dp"-->
    <!--        app:lottie_rawRes="@raw/splash_anim"-->
    <!--        android:transitionName="login_animation"/>-->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_police_svg_icon"
        android:transitionName="login_animation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/verify_your_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/please_enter_your_mobile_number_to_receive_a_verification_code"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxtPhone"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_india"
            android:drawablePadding="8dp"
            android:inputType="phone"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="200dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white" />


</LinearLayout>