<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:id="@+id/RA_animationView"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            app:lottie_rawRes="@raw/splash_anim"-->
        <!--            android:transitionName="login_animation"/>-->

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_police_svg_icon"
            android:transitionName="login_animation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Details"
            android:textSize="22sp"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/police_name"
                android:id="@+id/police_name"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:id="@+id/phone_number"
                    android:inputType="phone"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:id="@+id/email_ID"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Professional Details"
            android:textSize="22sp"
            android:layout_marginStart="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:hint="@string/select_designation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/designation"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_police_station"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/policeStation"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Posted city"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/posted_city"
                    android:padding="14dp"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/police_station_chief"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radio_button_group">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:id="@+id/head_YES"
                        android:layout_marginEnd="10dp"
                        android:text="YES"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/head_NO"
                        android:checked="true"
                        android:text="NO"/>

                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                app:cornerRadius="10dp"
                android:text="Proceed"
                android:layout_marginTop="25dp"
                android:backgroundTint="#F35F92"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center_horizontal" />

        </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>